[metadata]
name = potentialproject
version = 0.0.1
author = Maxim Batygin
description = Potential

[options]
packages = find:
install_requires =
    numpy>=1.13
    scipy>=1.0
    matplotlib>=3.0
scripts =
    bin/project

[options.entry_points]
console_scripts =
    check = potentialproject.project:main
gui_scripts =
    plotpotential = potentialproject.project:plot

[options.packages.find]
exclude =
    test
